checkout partially done

--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -90,7 +90,7 @@
         </div>
       </nav>
     </header>
-    <div class="box">
+    <div class="zIndexMask">
       <div class="itemHolder">
         <div class="items">
           <div class="item title"><h2>MY SHOPPING CART</h2></div>
@@ -133,13 +133,22 @@
           </div>
         </div>
         <div class="checkout">
-          <h1>Checkout</h1>
-          <p>
-            <b>Total: 2998$</b>
-            <br>
-            IPhone: 799$
-          </p>
-          <a class="checkoutButton block top" href="../index.html">Buy now</a> 
+          <div class="orderSummery">
+            <h3>Order Summery</h3>
+            <p>Subtotal: <span class="summe">€ 40,00</span></p>
+            <p>Estimated Tax: <span class="summe">€ 8,00</span></p>
+            <p>Estimated Shipping: <span class="summe">€ 4,99</span></p>
+          </div>
+          <hr>
+          <div class="total">
+            <h3>Estimated Total: <span class="summe">€ 52,99</span></h3>
+            <p>
+              Or for a interest-free<a href="https://google.com" title="In Raten zahlen">rate</a> of 20€ per month
+            </p>
+          </div>
+          <hr>
+          <div>Payment</div>
+          <!--<a class="checkoutButton block top" href="../index.html">Buy now</a>-->
         </div>
       </div>
     </div>
