search bar on other ar fixed

--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -151,7 +151,7 @@
             <form class="promo" action="shoppingCart.html">
             <fieldset>
               <legend><label for="promoCode">Apply Promocode</label></legend>
-                <input type="text" id="promoCode" name="promoCode">
+                <input type="text" id="promoCode" name="promoCode" required>
             </fieldset>
               <input type="submit" value="Apply">
             </form>
