--- a/HTML/phones.html
+++ b/HTML/phones.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
+
+    <link rel="stylesheet" href="../CSS/shoppingCart.css">
+    <link rel="stylesheet" href="../CSS/phones.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="CSS\scrolling.css" />
   </head>
 
   <body>
@@ -73,32 +75,57 @@
             </label>
             <ul class="menu__box">
               <div class="account">
-                <img class="account_img" src="IMG/account.png" />
+                <img class="account_img" src="../IMG/account.png" />
                 <li>
-                  <a href="HTML/login.html" class="account_item block">Login</a>
+                  <a href="../HTML/login.html" class="account_item block">Login</a>
                 </li>
               </div>
 
               <li><a class="menu__item" href="../index.html">Home</a></li>
               <li>
-                <a class="menu__item" href="HTML/shoppingCart.html"
+                <a class="menu__item" href="../HTML/shoppingCart.html"
                   >Shopping Cart <i class="fa-solid fa-cart-shopping"></i
                 ></a>
               </li>
-              <li><a class="menu__item" href="HTML/about.html">About</a></li>
-              <li><a class="menu__item" href="HTML/help.html">Help</a></li>
+              <li><a class="menu__item" href="../HTML/about.html">About</a></li>
+              <li><a class="menu__item" href="../HTML/help.html">Help</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
     <body>
-      <div class="things">
-        <div class="thing1"> <div>a</div><div>b</div><div>c</div></div>
-        <div class="thing1"> <div>a</div> <div>b</div> <div>c</div></div>
-        <div class="thing1"> <div>a</div><div>b</div><div>c</div></div>
-        <div class="thing1"><div>a</div><div>b</div><div>c</div></div>
-        <div class="thing1"><div>a</div><div>b</div><div>c</div></div>
+      <div class="items">
+        <div class="item title"><h2>SMARTPHONES</h2></div>
+        <div class="item">
+          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <div class="information">
+            <h3>Amazing Item</h3>
+            <p>Produkt Number: XYZ</p>
+            <p>Style: Whatever</p>
+            <p>Color: Green</p>
+          </div>
+          <div class="actions">
+            <h3>€ 4300,00</h3>
+            <a href="">Remove</a>
+          </div>
+        </div>
+        <div class="item">
+          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <div class="information">
+            <h3>Amazing Second Item</h3>
+            <p>Produkt Number: ABC</p>
+            <p>Style: Ever</p>
+            <p>Color: Yellow</p>
+          </div>
+          <div class="actions">
+            <h3>€ 8600,00</h3>
+            <a href="">Remove</a>
+          </div>
+        </div>
+        <div class="item cartBanner">
+          <a href="login.html">Login</a> now for a 15% discount on your next purchase!
+        </div>
       </div>
     </body>
   </body>
