--- a/HTML/phones.html
+++ b/HTML/phones.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
-
-    <link rel="stylesheet" href="../CSS/shoppingCart.css">
     <link rel="stylesheet" href="../CSS/phones.css">
     <link
       rel="stylesheet"
@@ -94,39 +92,63 @@
         </div>
       </nav>
     </header>
-    <body>
-      <div class="items">
-        <div class="item title"><h2>SMARTPHONES</h2></div>
-        <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
-          <div class="information">
-            <h3>Amazing Item</h3>
-            <p>Produkt Number: XYZ</p>
-            <p>Style: Whatever</p>
-            <p>Color: Green</p>
+      <div class="all">
+        <div class="items zIndexMask">
+          <div class="item"><h2 class="title">SMARTPHONES</h2></div>
+          <div class="item">
+            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <div class="information">
+              <h3>IPhone 14 pro</h3>
+              <p>Produkt Number: XYZ</p>
+              <p>Style: Whatever</p>
+              <p>Color: Green</p>
+            </div>
+            <div class="actions">
+              <h3>€ 4300,00</h3>
+              <a href="">Add to Cart</a>
+            </div>
           </div>
-          <div class="actions">
-            <h3>€ 4300,00</h3>
-            <a href="">Remove</a>
+          <div class="item">
+            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <div class="information">
+              <h3>Amazing Second Item</h3>
+              <p>Produkt Number: ABC</p>
+              <p>Style: Ever</p>
+              <p>Color: Yellow</p>
+            </div>
+            <div class="actions">
+              <h3>€ 69,00</h3>
+              <a href="">Add to Cart</a>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
-          <div class="information">
-            <h3>Amazing Second Item</h3>
-            <p>Produkt Number: ABC</p>
-            <p>Style: Ever</p>
-            <p>Color: Yellow</p>
-          </div>
-          <div class="actions">
-            <h3>€ 8600,00</h3>
-            <a href="">Remove</a>
-          </div>
+      <div class="checkout">
+        <div class="orderSummery">
+          <h3>Order Summery</h3>
+          <p>Subtotal: <span class="summe">€ 40,00</span></p>
+          <p>Estimated Tax: <span class="summe">€ 8,00</span></p>
+          <p>Estimated Shipping: <span class="summe">€ 4,99</span></p>
         </div>
-        <div class="item cartBanner">
-          <a href="login.html">Login</a> now for a 15% discount on your next purchase!
+        <hr>
+        <div class="total">
+          <h3>Estimated Total: <span class="summe">€ 52,99</span></h3>
+          <p>
+            Or for a interest-free<a href="https://google.com" title="In Raten zahlen">rate</a> of 20€ per month
+          </p>
         </div>
+        <hr>
+        <div>
+          <form class="promo" action="shoppingCart.html">
+            <fieldset>
+              <legend><label for="promoCode">Apply Promocode</label></legend>
+              <input type="text" id="promoCode" name="promoCode" required>
+            </fieldset>
+            <input type="submit" value="Apply">
+          </form>
+        </div>
+        <hr>
+        <a href="..\index.html"><button type="submit" class="checkoutButton">Checkout</button></a>
       </div>
-    </body>
+    </div>
   </body>
-</html>
+</html>s
