--- a/HTML/phones.html
+++ b/HTML/phones.html
@@ -14,7 +14,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
   </head>
-
   <body>
     <header>
       <nav>
@@ -23,11 +22,11 @@
           <a id="phones" class="link block top" href="">Phones</a>
 
           <ul id="sublink-phones">
-            <li><a class="sublink_item" href="#phone1">Phone1</a></li>
-            <li><a class="sublink_item" href="#phone2">Phone2</a></li>
-            <li><a class="sublink_item" href="#phone3">Phone3</a></li>
-            <li><a class="sublink_item" href="#phone4">Phone4</a></li>
-            <li><a class="sublink_item" href="#phone5">Phone5</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone1">Phone1</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone2">Phone2</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone3">Phone3</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone4">Phone4</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone5">Phone5</a></li>
           </ul>
 
           <a id="laptops" class="link block top" href="">Laptops</a>
@@ -73,7 +72,7 @@
             </label>
             <ul class="menu__box">
               <div class="account">
-                <img class="account_img" src="../IMG/account.png" />
+                <img class="account_img" src="../IMG/account.png"  alt="default profile picture"/>
                 <li>
                   <a href="../HTML/login.html" class="account_item block">Login</a>
                 </li>
@@ -92,16 +91,66 @@
         </div>
       </nav>
     </header>
-      <div class="all">
-        <div class="items zIndexMask">
-          <div class="item"><h2 class="title">SMARTPHONES</h2></div>
+    <div class="zIndexMask"><h2 class="item title">SMARTPHONES</h2></div>
+      <div class="all zIndexMask">
+        <div class="filter">
+          <div class="filterMask">
+            <form action="phones.html">
+              <div class="orderSummery">
+                <h3>Filter</h3>
+                <hr>
+                  <fieldset>
+                    <legend>Gerätefarben</legend>
+                    <label>
+                      <input type="checkbox" name="color" style="accent-color: #b40404" checked>
+                    </label>
+                    <label>
+                      <input type="checkbox" name="color" style="accent-color: #1627d7" checked>
+                    </label>
+                    <label>
+                      <input type="checkbox" name="color" style="accent-color: #046917" checked>
+                    </label>
+                    <label>
+                      <input type="checkbox" name="color" style="accent-color: #181818" checked>
+                    </label>
+                    <label>
+                      <input type="checkbox" name="color" style="accent-color: #e1e1e1" checked>
+                    </label>
+                  </fieldset>
+              </div>
+              <hr>
+              <div class="total">
+                <!-- form required -->
+                <fieldset>
+                  <legend>Speicherkapazität</legend>
+                  <label><input type="checkbox" name="speicher" checked>256 GB</label>
+                  <label><input type="checkbox" name="speicher" checked>512 GB</label>
+                  <label><input type="checkbox" name="speicher" checked>1 TB</label>
+                </fieldset>
+              </div>
+              <hr>
+              <div>
+                <fieldset>
+                  <legend>Betriebssystem</legend>
+                  <label><input type="checkbox" name="marke" checked>IOS</label>
+                  <label><input type="checkbox" name="marke" checked>Android</label>
+                  <label><input type="checkbox" name="marke" checked>Andere</label>
+                </fieldset>
+                <hr>
+                <input type="reset" value="Reset">
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="items">
           <div class="item">
             <img class="itemImage" src="../IMG/temp.jpeg" alt="">
             <div class="information">
-              <h3>IPhone 14 pro</h3>
+              <h3 id="phone1">Amazing first phone</h3>
               <p>Produkt Number: XYZ</p>
               <p>Style: Whatever</p>
               <p>Color: Green</p>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, aperiam blanditiis commodi distinctio dolorem dolores eaque earum eius error facilis iure libero nam officiis perspiciatis reprehenderit rerum ullam voluptatem voluptates?</p>
             </div>
             <div class="actions">
               <h3>€ 4300,00</h3>
@@ -111,10 +160,53 @@
           <div class="item">
             <img class="itemImage" src="../IMG/temp.jpeg" alt="">
             <div class="information">
-              <h3>Amazing Second Item</h3>
+              <h3 id="phone2">Amazing Second Item</h3>
               <p>Produkt Number: ABC</p>
               <p>Style: Ever</p>
               <p>Color: Yellow</p>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, aperiam blanditiis commodi distinctio dolorem dolores eaque earum eius error facilis iure libero nam officiis perspiciatis reprehenderit rerum ullam voluptatem voluptates?</p>
+            </div>
+            <div class="actions">
+              <h3>€ 69,00</h3>
+              <a href="">Add to Cart</a>
+            </div>
+          </div>
+          <div class="item">
+            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <div class="information">
+              <h3 id="phone3">Amazing third Item</h3>
+              <p>Produkt Number: ABC</p>
+              <p>Style: Ever</p>
+              <p>Color: Yellow</p>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, aperiam blanditiis commodi distinctio dolorem dolores eaque earum eius error facilis iure libero nam officiis perspiciatis reprehenderit rerum ullam voluptatem voluptates?</p>
+            </div>
+            <div class="actions">
+              <h3>€ 69,00</h3>
+              <a href="">Add to Cart</a>
+            </div>
+          </div>
+          <div class="item">
+            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <div class="information">
+              <h3 id="phone4">Amazing fourth Item</h3>
+              <p>Produkt Number: ABC</p>
+              <p>Style: Ever</p>
+              <p>Color: Yellow</p>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, aperiam blanditiis commodi distinctio dolorem dolores eaque earum eius error facilis iure libero nam officiis perspiciatis reprehenderit rerum ullam voluptatem voluptates?</p>
+            </div>
+            <div class="actions">
+              <h3>€ 69,00</h3>
+              <a href="">Add to Cart</a>
+            </div>
+          </div>
+          <div class="item">
+            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <div class="information">
+              <h3 id="phone5">Amazing fifth Item</h3>
+              <p>Produkt Number: ABC</p>
+              <p>Style: Ever</p>
+              <p>Color: Yellow</p>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At atque culpa, cum cumque doloremque eaque excepturi exercitationem iste maiores molestias omnis quae quisquam recusandae rem sed ullam, veniam. Ipsa, quam.</p>
             </div>
             <div class="actions">
               <h3>€ 69,00</h3>
@@ -122,33 +214,6 @@
             </div>
           </div>
         </div>
-      <div class="checkout">
-        <div class="orderSummery">
-          <h3>Order Summery</h3>
-          <p>Subtotal: <span class="summe">€ 40,00</span></p>
-          <p>Estimated Tax: <span class="summe">€ 8,00</span></p>
-          <p>Estimated Shipping: <span class="summe">€ 4,99</span></p>
-        </div>
-        <hr>
-        <div class="total">
-          <h3>Estimated Total: <span class="summe">€ 52,99</span></h3>
-          <p>
-            Or for a interest-free<a href="https://google.com" title="In Raten zahlen">rate</a> of 20€ per month
-          </p>
-        </div>
-        <hr>
-        <div>
-          <form class="promo" action="shoppingCart.html">
-            <fieldset>
-              <legend><label for="promoCode">Apply Promocode</label></legend>
-              <input type="text" id="promoCode" name="promoCode" required>
-            </fieldset>
-            <input type="submit" value="Apply">
-          </form>
-        </div>
-        <hr>
-        <a href="..\index.html"><button type="submit" class="checkoutButton">Checkout</button></a>
       </div>
-    </div>
   </body>
-</html>s
+</html>
