--- a/HTML/tablets.html
+++ b/HTML/tablets.html
@@ -23,11 +23,11 @@
           <a id="phones" class="link block top" href="">Phones</a>
 
           <ul id="sublink-phones">
-            <li><a class="sublink_item" href="#phone1">Phone1</a></li>
-            <li><a class="sublink_item" href="#phone2">Phone2</a></li>
-            <li><a class="sublink_item" href="phone3">Phone3</a></li>
-            <li><a class="sublink_item" href="phone4">Phone4</a></li>
-            <li><a class="sublink_item" href="phone5">Phone5</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone1">Phone1</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone2">Phone2</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone3">Phone3</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone4">Phone4</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone5">Phone5</a></li>
           </ul>
 
           <a id="laptops" class="link block top" href="">Laptops</a>
