--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -24,11 +24,11 @@
           <a id="phones" class="link block top" href="">Phones</a>
 
           <ul id="sublink-phones">
-            <li><a class="sublink_item" href="#">Phone1</a></li>
-            <li><a class="sublink_item" href="#">Phone2</a></li>
-            <li><a class="sublink_item" href="#">Phone3</a></li>
-            <li><a class="sublink_item" href="#">Phone4</a></li>
-            <li><a class="sublink_item" href="#">Phone5</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone1">Phone1</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone2">Phone2</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone3">Phone3</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone4">Phone4</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone5">Phone5</a></li>
           </ul>
 
           <a id="laptops" class="link block top" href="">Laptops</a>
