--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="CSS/main.css" />
     <link rel="stylesheet" href="CSS/dropdown.css" />
     <link rel="stylesheet" href="CSS/links-sublinks.css" />
-    <script src="../JS/serarchbar.js"></script>
+    <script src="JS/searchbar.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="CSS\scrolling.css">
   </head>
 
   <body>
@@ -24,11 +23,11 @@
           <a id="phones" class="link block top" href="HTML/phones.html">Phones</a>
 
           <ul id="sublink-phones">
-            <li><a class="sublink_item" href="#phone1">Phone1</a></li>
-            <li><a class="sublink_item" href="#phone2">Phone2</a></li>
-            <li><a class="sublink_item" href="#phone3">Phone3</a></li>
-            <li><a class="sublink_item" href="#phone4">Phone4</a></li>
-            <li><a class="sublink_item" href="#phone5">Phone5</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone1">Phone1</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone2">Phone2</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone3">Phone3</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone4">Phone4</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone5">Phone5</a></li>
           </ul>
 
           <a id="laptops" class="link block top" href="HTML/laptops.html">Laptops</a>
