--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
           <a id="phones" class="link block top" href="HTML/phones.html">Phones</a>
 
           <ul id="sublink-phones">
-            <li><a class="sublink_item" href="HTML/phones.html#phone1">Phone1</a></li>
-            <li><a class="sublink_item" href="HTML/phones.html#phone2">Phone2</a></li>
-            <li><a class="sublink_item" href="HTML/phones.html#phone3">Phone3</a></li>
-            <li><a class="sublink_item" href="HTML/phones.html#phone4">Phone4</a></li>
-            <li><a class="sublink_item" href="HTML/phones.html#phone5">Phone5</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone1">Apple IPhone 13</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone2">Apple IPhone 14</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone3">Google Pixel 7</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone4">Samsung S23</a></li>
+            <li><a class="sublink_item" href="HTML/phones.html#phone5">Samsung S23 Ultra</a></li>
           </ul>
 
           <a id="laptops" class="link block top" href="HTML/laptops.html">Laptops</a>
 
           <ul id="sublink-laptops">
-            <li><a class="sublink_item" href="laptop1">Laptop1</a></li>
-            <li><a class="sublink_item" href="laptop2">Laptop2</a></li>
-            <li><a class="sublink_item" href="laptop3">Laptop3</a></li>
-            <li><a class="sublink_item" href="laptop4">Laptop4</a></li>
-            <li><a class="sublink_item" href="laptop5">Laptop5</a></li>
+            <li><a class="sublink_item" href="laptop1">Apple Macbook Pro M2</a></li>
+            <li><a class="sublink_item" href="laptop2">Apple Macbook Air M2</a></li>
+            <li><a class="sublink_item" href="laptop3">Framework 13"</a></li>
+            <li><a class="sublink_item" href="laptop4">XMG Fusion 15</a></li>
+            <li><a class="sublink_item" href="laptop5">Dell XPS 15</a></li>
           </ul>
 
           <a id="tablets" class="link block top" href="HTML/tablets.html">Tablets</a>
 
           <ul id="sublink-tablets">
-            <li><a class="sublink_item" href="tablet1">Tablet1</a></li>
-            <li><a class="sublink_item" href="tablet2">Tablet2</a></li>
-            <li><a class="sublink_item" href="tablet3">Tablet3</a></li>
-            <li><a class="sublink_item" href="tablet4">Tablet4</a></li>
-            <li><a class="sublink_item" href="tablet5">Tablet5</a></li>
+            <li><a class="sublink_item" href="tablet1">Apple IPad Pro M2</a></li>
+            <li><a class="sublink_item" href="tablet2">Apple IPad Air M2</a></li>
+            <li><a class="sublink_item" href="tablet3">Remarkable 2</a></li>
+            <li><a class="sublink_item" href="tablet4">Samsung Galaxy Tab S8</a></li>
+            <li><a class="sublink_item" href="tablet5">Huawei Mate Pad Pro</a></li>
           </ul>
         </div>
 
@@ -55,9 +55,23 @@
           <div class="searchBox">
             <input id="search"onkeyup="search_item()" type="text" placeholder="Search.." />
             <ol id='list'>
-              <li class="searchItem">ABC</li>
-              <li class="searchItem">123</li>
-              <li class="searchItem">Wifi Pineapple Mark VII</li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone1">Apple IPhone 13</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone2">Apple IPhone 14</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Google Pixel 7</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Samsung S23</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Samsung S23 Ultra</a></li>
+
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone1">Apple IPad Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone2">Apple IPad Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Remarkable 2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Samsung Galaxy Tab S8</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Huawei Mate Pad Pro</a></li>
+
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone1">Apple Macbook Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone2">Apple Macbook Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Framework 13"</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">XMG Fusion 15</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Dell XPS 15</a></li>
             </ol>
           </div>
 
