laptops + tablets page, dropdown links fixed, small changes

--- a/HTML/register.html
+++ b/HTML/register.html
@@ -14,20 +14,21 @@
 
     <main id="main-holder">
 
-      <h1 id="login-header">Login</h1>
+      <h1 id="login-header">Register</h1>
       
       <form id="login-form">
         <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+        <input type="email" name="password" id="email-field" class="login-form-field" placeholder="Email">
         <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-        <input type="submit" value="Login" id="login-form-submit">
+        <input type="submit" value="Register" id="login-form-submit">
       </form>
     
       <div id="login-error-msg-holder">
-        <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+        <p id="login-error-msg">Server Issue<span id="error-msg-second-line">Please try again later</span></p>
       </div>
       <div>
         <a href="../index.html" class="back">Home</a>
-      <a href="../HTML/register.html" class="back">Register</a>
+      <a href="../HTML/login.html" class="back">Login</a>
       </div>
 
     </main>
