--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
           <a id="laptops" class="link block top" href="HTML/laptops.html">Laptops</a>
 
           <ul id="sublink-laptops">
-            <li><a class="sublink_item" href="laptop1">Apple Macbook Pro M2</a></li>
-            <li><a class="sublink_item" href="laptop2">Apple Macbook Air M2</a></li>
-            <li><a class="sublink_item" href="laptop3">Framework 13"</a></li>
-            <li><a class="sublink_item" href="laptop4">XMG Fusion 15</a></li>
-            <li><a class="sublink_item" href="laptop5">Dell XPS 15</a></li>
+            <li><a class="sublink_item" href="HTML/laptops.html#laptop1">Apple Macbook Pro M2</a></li>
+            <li><a class="sublink_item" href="HTML/laptops.html#laptop2">Apple Macbook Air M2</a></li>
+            <li><a class="sublink_item" href="HTML/laptops.html#laptop3">Framework 13"</a></li>
+            <li><a class="sublink_item" href="HTML/laptops.html#laptop4">XMG Fusion 15</a></li>
+            <li><a class="sublink_item" href="HTML/laptops.html#laptop5">Dell XPS 15</a></li>
           </ul>
 
           <a id="tablets" class="link block top" href="HTML/tablets.html">Tablets</a>
 
           <ul id="sublink-tablets">
-            <li><a class="sublink_item" href="tablet1">Apple IPad Pro M2</a></li>
-            <li><a class="sublink_item" href="tablet2">Apple IPad Air M2</a></li>
-            <li><a class="sublink_item" href="tablet3">Remarkable 2</a></li>
-            <li><a class="sublink_item" href="tablet4">Samsung Galaxy Tab S8</a></li>
-            <li><a class="sublink_item" href="tablet5">Huawei Mate Pad Pro</a></li>
+            <li><a class="sublink_item" href="HTML/tablets.html#tablet1">Apple IPad Pro M2</a></li>
+            <li><a class="sublink_item" href="HTML/tablets.html#tablet2">Apple IPad Air M2</a></li>
+            <li><a class="sublink_item" href="HTML/tablets.html#tablet3">Remarkable 2</a></li>
+            <li><a class="sublink_item" href="HTML/tablets.html#tablet4">Samsung Galaxy Tab S8</a></li>
+            <li><a class="sublink_item" href="HTML/tablets.html#tablet5">Huawei Mate Pad Pro</a></li>
           </ul>
         </div>
 
         <div class="more">
           <div class="searchBox">
-            <input id="search"onkeyup="search_item()" type="text" placeholder="Search.." />
+            <input id="search" onkeyup="search_item()" type="text" placeholder="Search.." />
             <ol id='list'>
               <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone1">Apple IPhone 13</a></li>
               <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone2">Apple IPhone 14</a></li>
@@ -82,7 +82,7 @@
             </label>
             <ul class="menu__box">
               <div class="account">
-                <img class="account_img" src="IMG/account.png" />
+                <img class="account_img" src="IMG/account.png" alt="default profile picture"/>
                 <li>
                   <a href="HTML/login.html" class="account_item block">Login</a>
                 </li>
@@ -102,7 +102,7 @@
       </nav>
     </header>
     <div class="banner">
-      <img class="bannerImage" src="img/banner1.jpg" alt="Apple Products" />
+      <img class="bannerImage" src="IMG/banner1.jpg" alt="Apple Products" />
     </div>
     <div class="angeboteContent">Die neuesten Laptops</div>
   </body>
