--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -21,34 +21,34 @@
       <nav>
         <div class="logo">logo</div>
         <div class="links">
-          <a id="phones" class="link block top" href="">Phones</a>
+          <a id="phones" class="link block top" href="../HTML/phones.html">Phones</a>
 
           <ul id="sublink-phones">
-            <li><a class="sublink_item" href="../HTML/phones.html#phone1">Phone1</a></li>
-            <li><a class="sublink_item" href="../HTML/phones.html#phone2">Phone2</a></li>
-            <li><a class="sublink_item" href="../HTML/phones.html#phone3">Phone3</a></li>
-            <li><a class="sublink_item" href="../HTML/phones.html#phone4">Phone4</a></li>
-            <li><a class="sublink_item" href="../HTML/phones.html#phone5">Phone5</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone1">Apple IPhone 13</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone2">Apple IPhone 14</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone3">Google Pixel 7</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone4">Samsung S23</a></li>
+            <li><a class="sublink_item" href="../HTML/phones.html#phone5">Samsung S23 Ultra</a></li>
           </ul>
 
-          <a id="laptops" class="link block top" href="">Laptops</a>
+          <a id="laptops" class="link block top" href="../HTML/laptops.html">Laptops</a>
 
           <ul id="sublink-laptops">
-            <li><a class="sublink_item" href="#">Laptop1</a></li>
-            <li><a class="sublink_item" href="#">Laptop2</a></li>
-            <li><a class="sublink_item" href="#">Laptop3</a></li>
-            <li><a class="sublink_item" href="#">Laptop4</a></li>
-            <li><a class="sublink_item" href="#">Laptop5</a></li>
+            <li><a class="sublink_item" href="../HTML/laptops.html#laptop1">Apple Macbook Pro M2</a></li>
+            <li><a class="sublink_item" href="../HTML/laptops.html#laptop2">Apple Macbook Air M2</a></li>
+            <li><a class="sublink_item" href="../HTML/laptops.html#laptop3">Framework 13"</a></li>
+            <li><a class="sublink_item" href="../HTML/laptops.html#laptop4">XMG Fusion 15</a></li>
+            <li><a class="sublink_item" href="../HTML/laptops.html#laptop5">Dell XPS 15</a></li>
           </ul>
 
-          <a id="tablets" class="link block top" href="">Tablets</a>
+          <a id="tablets" class="link block top" href="../HTML/tablets.html">Tablets</a>
 
           <ul id="sublink-tablets">
-            <li><a class="sublink_item" href="#">Tablet1</a></li>
-            <li><a class="sublink_item" href="#">Tablet2</a></li>
-            <li><a class="sublink_item" href="#">Tablet3</a></li>
-            <li><a class="sublink_item" href="#">Tablet4</a></li>
-            <li><a class="sublink_item" href="#">Tablet5</a></li>
+            <li><a class="sublink_item" href="../HTML/tablets.html#tablet1">Apple IPad Pro M2</a></li>
+            <li><a class="sublink_item" href="../HTML/tablets.html#tablet2">Apple IPad Air M2</a></li>
+            <li><a class="sublink_item" href="../HTML/tablets.html#tablet3">Remarkable 2</a></li>
+            <li><a class="sublink_item" href="../HTML/tablets.html#tablet4">Samsung Galaxy Tab S8</a></li>
+            <li><a class="sublink_item" href="../HTML/tablets.html#tablet5">Huawei Mate Pad Pro</a></li>
           </ul>
         </div>
 
@@ -157,7 +157,7 @@
             </form>
           </div>
           <hr>
-          <a href="..\index.html"><button type="submit" class="checkoutButton">Checkout</button></a>
+          <a href="../index.html"><button type="submit" class="checkoutButton">Checkout</button></a>
         </div>
       </div>
     </div>
