--- a/HTML/help.html
+++ b/HTML/help.html
@@ -55,9 +55,23 @@
           <div class="searchBox">
             <input id="search" onkeyup="search_item()" type="text" placeholder="Search.." />
             <ol id='list'>
-              <li class="searchItem">ABC</li>
-              <li class="searchItem">123</li>
-              <li class="searchItem">Wifi Pineapple Mark VII</li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/phones.html#phone1">Apple IPhone 13</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/phones.html#phone2">Apple IPhone 14</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/phones.html#phone3">Google Pixel 7</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/phones.html#phone4">Samsung S23</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/phones.html#phone5">Samsung S23 Ultra</a></li>
+
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/tablets.html#tablet1">Apple IPad Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/tablets.html#tablet2">Apple IPad Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/tablets.html#tablet3">Remarkable 2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/tablets.html#tablet4">Samsung Galaxy Tab S8</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/tablets.html#tablet5">Huawei Mate Pad Pro</a></li>
+
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/laptops.html#laptop1">Apple Macbook Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/laptops.html#laptop2">Apple Macbook Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/laptops.html#laptop3">Framework 13"</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/laptops.html#laptop4">XMG Fusion 15</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="../HTML/laptops.html#laptop5">Dell XPS 15</a></li>
             </ol>
           </div>
 
