--- a/HTML/phones.html
+++ b/HTML/phones.html
@@ -144,7 +144,7 @@
         </div>
         <div class="items">
           <div class="item">
-            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <img class="itemImage" src="../IMG/Phone1.jpg" alt="Bild eines S23 Ultra">
             <div class="information">
               <h3 id="phone1">Amazing first phone</h3>
               <p>Produkt Number: XYZ</p>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div class="item">
-            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <img class="itemImage" src="../IMG/Phone2.jpg" alt="Bild eines IPhone 14 Pro Max">
             <div class="information">
               <h3 id="phone2">Amazing Second Item</h3>
               <p>Produkt Number: ABC</p>
@@ -172,7 +172,7 @@
             </div>
           </div>
           <div class="item">
-            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <img class="itemImage" src="../IMG/Phone3.jpg" alt="Bild eines Honor Magic 5 Pro">
             <div class="information">
               <h3 id="phone3">Amazing third Item</h3>
               <p>Produkt Number: ABC</p>
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="item">
-            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <img class="itemImage" src="../IMG/Phone4.jpg" alt="Bild des Moto Edge 40 Pro">
             <div class="information">
               <h3 id="phone4">Amazing fourth Item</h3>
               <p>Produkt Number: ABC</p>
@@ -200,7 +200,7 @@
             </div>
           </div>
           <div class="item">
-            <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+            <img class="itemImage" src="../IMG/Phone5.jpg" alt="Bild des Xiaomi 13 Pro">
             <div class="information">
               <h3 id="phone5">Amazing fifth Item</h3>
               <p>Produkt Number: ABC</p>
