search bar fixed + logo added + small fixes

--- a/HTML/laptops.html
+++ b/HTML/laptops.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="stylesheet" href="../CSS/dropdown.css" />
     <link rel="stylesheet" href="../CSS/links-sublinks.css" />
-    <link rel="stylesheet" href="../CSS/phones.css">
+    <link rel="stylesheet" href="../CSS/category.css">
     <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -19,7 +19,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo">logo</div>
+        <a href="../index.html" class="logo"><img src="../IMG/transparent_gadgexLogo.png" alt="Logo" height="30px"><h1>GADGEX</h1></a>
         <div class="links">
           <a id="phones" class="link block top" href="../HTML/phones.html">Phones</a>
 
