--- a/HTML/about.html
+++ b/HTML/about.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo">logo</div>
+        <a href="../index.html" class="logo"><img src="../IMG/transparent_gadgexLogo.png" alt="Logo" height="30px"><h1>GADGEX</h1></a>
         <div class="links">
           <a id="phones" class="link block top" href="../HTML/phones.html">Phones</a>
 
@@ -103,8 +103,8 @@
     </header>
     <div class="aboutContent">
       <div class="aboutText">
-        <h1>Welcome to [NAME]</h1>
-        <p>At [NAME], we offer a wide selection of top-quality electronic.</p>
+        <h1>Welcome to Gadgex</h1>
+        <p>At Gadgex, we offer a wide selection of top-quality electronic.</p>
         <p>
           Our team of experts is committed to providing you with the latest and
           most innovative technology at competitive prices. Whether you are a
@@ -112,7 +112,7 @@
           have everything you need to stay connected and productive.
         </p>
         <p>
-          At [NAME], we understand that electronic devices are an essential part
+          At Gadgex, we understand that electronic devices are an essential part
           of your daily life. That's why we source only the best brands and
           products that meet our rigorous standards for quality, performance,
           and reliability. We strive to offer a range of products that cater to
