--- a/HTML/help.html
+++ b/HTML/help.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo">logo</div>
+        <a href="../index.html" class="logo"><img src="../IMG/transparent_gadgexLogo.png" alt="Logo" height="30px"><h1>GADGEX</h1></a>
         <div class="links">
           <a id="phones" class="link block top" href="../HTML/phones.html">Phones</a>
 
@@ -106,7 +106,7 @@
             <h1>Help:</h1>
             <p>
               <b>Product Information:</b>
-              <br>>
+              <br>
               We strive to provide accurate and up-to-date information about all of our products. If you have any questions about a specific item, please contact us and we will do our best to provide you with the information you need.
               <br>
               <br>
@@ -118,7 +118,7 @@
               <br>     
               <b>Payment Options:</b>
               <br>
-              We accept a variety of payment options, including credit and debit cards, PayPal, and other online payment methods. If you have any questions about payment options, please contact us.
+              We accept a variety of payment options, including credit and debit cards, PayPal, and other online payment methods. If you have any questions about payment options, feel free to contact us at gadgex@shop.com
               <br>
               <br>
               <b>Shipping:</b>
@@ -135,7 +135,10 @@
               <br>
               We are dedicated to providing excellent customer service. If you have any questions or concerns, please contact us via phone or email. Our customer service team is available during business hours to assist you.
               <br>
-              Thank you for choosing our technology webshop! We appreciate your business and look forward to serving you.
+              Email: gadgex@shop.com
+              <br>
+              Phone: +183 3269 1066
+              <br>
             </p>
             <a class="button block top" href="../index.html">Home</a>
           </div> 
