--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo">logo</div>
+        <a href="../index.html" class="logo"><img src="../IMG/transparent_gadgexLogo.png" alt="Logo" height="30px"><h1>GADGEX</h1></a>
         <div class="links">
           <a id="phones" class="link block top" href="../HTML/phones.html">Phones</a>
 
