--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo">logo</div>
+        <a href="index.html" class="logo"><img src="IMG/transparent_gadgexLogo.png" alt="Logo" height="30px"><h1>GADGEX</h1></a>
         <div class="links">
           <a id="phones" class="link block top" href="HTML/phones.html">Phones</a>
 
@@ -69,7 +69,7 @@
 
               <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop1">Apple Macbook Pro M2</a></li>
               <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop2">Apple Macbook Air M2</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#phone3">Framework 13"</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop3">Framework 13"</a></li>
               <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop3">XMG Fusion 15</a></li>
               <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop5">Dell XPS 15</a></li>
             </ol>
