index page + privacy policy + small fixes

--- a/HTML/shoppingCart.html
+++ b/HTML/shoppingCart.html
@@ -157,7 +157,7 @@
           <div class="total">
             <h3>Estimated Total: <span class="summe">€ 52,99</span></h3>
             <p>
-              Or for a interest-free<a href="https://google.com" title="In Raten zahlen">rate</a> of 20€ per month
+              Or for a interest-free rate of 20€ per month
             </p>
           </div>
           <hr>
