--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/main.css" />
     <link rel="stylesheet" href="CSS/dropdown.css" />
     <link rel="stylesheet" href="CSS/links-sublinks.css" />
+    <link rel="stylesheet" href="CSS/index.css">
     <script src="JS/searchbar.js"></script>
     <link
       rel="stylesheet"
@@ -102,8 +103,37 @@
       </nav>
     </header>
     <div class="banner">
-      <img class="bannerImage" src="IMG/banner1.jpg" alt="Apple Products" />
+      <img class="bannerImage" src="IMG/bannerApple.jpg" alt="Apple Products" />
+      <h3>New from Apple</h3>
     </div>
-    <div class="angeboteContent">Die neuesten Laptops</div>
+    <a href="HTML/phones.html#phone2" class="angeboteContent">
+      <h4>iPhone 14</h4>
+      <h5>Wonderfull.</h5>
+      <img src="IMG/iphone14banner.png" alt="Iphone 14, in a variety of colors">
+    </a>
+
+    <div class="banner">
+      <img class="bannerImage" src="IMG/bannerSamsung.png" alt="Samsung Products" />
+      <h3>New from Samsung</h3>
+    </div>
+    <a href="HTML/phones.html#phone5" class="angeboteContent">
+      <h4>S23 Ultra</h4>
+      <h5>Stellar.</h5>
+      <img src="IMG/s23ultraBanner.png" alt="Samsung S23 Ultra, in dark Green">
+    </a>
+
+    <div class="banner">
+      <img class="bannerImage" src="IMG/bannerDell.png" alt="Samsung Products" />
+      <h3>New from Dell</h3>
+    </div>
+    <a href="HTML/laptops.html#laptop5" class="angeboteContent">
+      <h4>XPS 15</h4>
+      <h5>Power.</h5>
+      <img src="IMG/xps15banner.png" alt="Samsung S23 Ultra, in dark Green">
+    </a>
+
+  <footer class="banner footer">
+    <a href="HTML/privacyPolicy.html">Privacy Policy</a> | <a href="HTML/help.html">Need Help?</a>| <a href="HTML/about.html">About us</a>
+  </footer>
   </body>
 </html>
