--- a/HTML/laptops.html
+++ b/HTML/laptops.html
@@ -142,7 +142,7 @@
       </div>
       <div class="items">
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Laptop1.jpg" alt="">
           <div class="information">
             <h3 id="laptop1">Apple Macbook Pro M2</h3>
             <p>Produkt Number: XYZ</p>
@@ -156,7 +156,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Laptop2.jpg" alt="">
           <div class="information">
             <h3 id="laptop2">Apple Macbook Air M2</h3>
             <p>Produkt Number: ABC</p>
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Laptop3.jpg" alt="">
           <div class="information">
             <h3 id="laptop3">Framework 13"</h3>
             <p>Produkt Number: ABC</p>
@@ -184,7 +184,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Laptop4.jpg" alt="">
           <div class="information">
             <h3 id="laptop4">XMG Fusion 15</h3>
             <p>Produkt Number: ABC</p>
@@ -198,7 +198,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Laptop5.jpg" alt="">
           <div class="information">
             <h3 id="laptop5">Dell XPS 15</h3>
             <p>Produkt Number: ABC</p>
