--- a/HTML/tablets.html
+++ b/HTML/tablets.html
@@ -152,7 +152,7 @@
       </div>
       <div class="items">
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Tablet1.jpg" alt="">
           <div class="information">
             <h3 id="tablet1">Apple IPad Pro M2</h3>
             <p>Produkt Number: XYZ</p>
@@ -166,7 +166,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Tablet2.jpg" alt="">
           <div class="information">
             <h3 id="tablet2">Apple IPad Air M2</h3>
             <p>Produkt Number: ABC</p>
@@ -180,7 +180,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Tablet3.jpg" alt="">
           <div class="information">
             <h3 id="tablet3">Remarkable 2</h3>
             <p>Produkt Number: ABC</p>
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Tablet4.jpg" alt="">
           <div class="information">
             <h3 id="tablet4">Samsung Galaxy Tab S8</h3>
             <p>Produkt Number: ABC</p>
@@ -208,7 +208,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="itemImage" src="../IMG/temp.jpeg" alt="">
+          <img class="itemImage" src="../IMG/Tablet5.jpg" alt="">
           <div class="information">
             <h3 id="tablet5">Huawei Mate Pad Pro</h3>
             <p>Produkt Number: ABC</p>
